edit domain for sell page

--- a/domain-for-sale.html
+++ b/domain-for-sale.html
@@ -7,7 +7,6 @@
   <title>BellevueElectrician.com is for Sale</title>
   <link rel="icon" type="image/png" href="favicon.png">
 
-
   <!-- External CSS -->
   <link rel="stylesheet" href="css/domain-for-sale.css">
 
@@ -18,6 +17,7 @@
     "@type": "Product",
     "name": "BellevueElectrician.com Domain",
     "description": "Premium SEO-friendly domain perfect for electricians or electrical service providers in Bellevue.",
+    "image": "https://bellevueelectrician.com/images/domain-preview.png",
     "brand": {
       "@type": "Brand",
       "name": "Golden Domain"
@@ -27,7 +27,27 @@
       "url": "https://bellevueelectrician.com/domain-for-sale.html",
       "priceCurrency": "USD",
       "price": "275",
-      "availability": "https://schema.org/InStock"
+      "availability": "https://schema.org/InStock",
+      "shippingDetails": {
+        "@type": "OfferShippingDetails",
+        "shippingRate": {
+          "@type": "MonetaryAmount",
+          "value": "0.00",
+          "currency": "USD"
+        },
+        "deliveryTime": {
+          "@type": "ShippingDeliveryTime",
+          "handlingTime": "P1D",
+          "transitTime": "P3D"
+        }
+      },
+      "hasMerchantReturnPolicy": {
+        "@type": "MerchantReturnPolicy",
+        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+        "merchantReturnDays": 30,
+        "returnMethod": "ReturnByMail",
+        "returnFees": "FreeReturn"
+      }
     },
     "seller": {
       "@type": "Person",
