edit domaine for sell page

--- a/domain-for-sale.html
+++ b/domain-for-sale.html
@@ -10,13 +10,13 @@
   <!-- External CSS -->
   <link rel="stylesheet" href="css/domain-for-sale.css">
 
-  <!-- Schema.org Product markup for SEO -->
+  <!-- ✅ Updated Schema.org Product markup for SEO -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org/",
     "@type": "Product",
     "name": "BellevueElectrician.com Domain",
-    "description": "Premium SEO-friendly domain perfect for electricians or electrical service providers in Bellevue.",
+    "description": "Premium SEO-friendly domain perfect for electricians or electrical service providers in Bellevue, WA.",
     "image": "https://bellevueelectrician.com/images/domain-preview.png",
     "brand": {
       "@type": "Brand",
@@ -27,6 +27,7 @@
       "url": "https://bellevueelectrician.com/domain-for-sale.html",
       "priceCurrency": "USD",
       "price": "275",
+      "priceValidUntil": "2025-12-31",
       "availability": "https://schema.org/InStock",
       "shippingDetails": {
         "@type": "OfferShippingDetails",
