--- a/contact.html
+++ b/contact.html
@@ -5,35 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="favicon.png">
 
-
-  <!-- ✅ Optimized Title -->
   <title>Contact Bellevue Electrician | Licensed Electricians in Bellevue, WA</title>
 
-  <!-- ✅ Optimized Meta Description -->
   <meta name="description" content="Contact Bellevue Electrician today for residential, commercial, or emergency electrical services in Bellevue, WA. Call (425) 555-0199 or request a free estimate online.">
-
-  <!-- ✅ Additional SEO Meta Tags -->
   <meta name="keywords" content="Bellevue electrician contact, electrical services Bellevue WA, licensed electrician Bellevue, emergency electrician Bellevue">
   <meta name="robots" content="index, follow" />
 
-  <!-- ✅ Open Graph Tags -->
   <meta property="og:title" content="Contact Bellevue Electrician | Local Electrical Contractors in Bellevue WA" />
   <meta property="og:description" content="Get in touch with licensed electricians in Bellevue, WA. Request service or a free quote today!" />
   <meta property="og:url" content="https://bellevueelectrician.com/contact.html" />
   <meta property="og:type" content="website" />
   <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.jpg" />
 
-  <!-- ✅ Canonical URL -->
   <link rel="canonical" href="https://bellevueelectrician.com/contact.html" />
 
-  <!-- ✅ Styles -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/contact.css" />
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/footer.css" />
 
-  <!-- ✅ Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -75,7 +66,6 @@
           <p><strong>Phone:</strong> <a href="tel:+14255550199">(425) 555-0199</a></p>
           <p><strong>Email:</strong> <a href="mailto:info@bellevueelectrician.com">info@bellevueelectrician.com</a></p>
           <p><strong>Hours:</strong> Mon – Sat: 8AM – 6PM</p>
-          <!-- ✅ Internal link suggestion -->
           <p style="margin-top:10px;">Looking for our <a href="services.html">electrical services in Bellevue</a>?</p>
         </div>
 
@@ -86,6 +76,20 @@
           <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
           <button type="submit">Send Message</button>
         </form>
+      </div>
+
+      <!-- ✅ Embedded Google Map -->
+      <div class="map-container" style="margin-top:40px;">
+        <h2>Find Us on the Map</h2>
+        <iframe 
+          src="https://www.google.com/maps?q=Bellevue,+WA,+USA&output=embed"
+          width="100%" 
+          height="350" 
+          style="border:0; border-radius:10px; box-shadow:0 2px 10px rgba(0,0,0,0.1);" 
+          allowfullscreen="" 
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
       </div>
     </div>
   </section>
@@ -126,6 +130,11 @@
       "addressRegion": "WA",
       "postalCode": "98004",
       "addressCountry": "US"
+    },
+    "geo": {
+      "@type": "GeoCoordinates",
+      "latitude": "47.6101",
+      "longitude": "-122.2015"
     },
     "openingHours": "Mo-Sa 08:00-18:00",
     "url": "https://bellevueelectrician.com/contact.html",
