change imgs extention to webp

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
   <meta property="og:description" content="Trusted and certified electricians providing safe, affordable electrical services across Bellevue and nearby areas." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://bellevueelectrician.com/about.html" />
-  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.jpg" />
+  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.webp" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <link rel="stylesheet" href="css/global.css" />
@@ -55,7 +55,7 @@
   </header>
 
   <!-- HERO SECTION -->
-  <section class="hero full-hero" style="background-image: url('images/hero/electrician-team.jpg');">
+  <section class="hero full-hero" style="background-image: url('images/hero/electrician-team.webp');">
     <div class="hero-content">
       <h1>About Bellevue Electrician</h1>
       <p>Trusted, licensed, and dedicated to powering Bellevue homes and businesses safely.</p>
@@ -119,7 +119,7 @@
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Bellevue Electrician",
-    "image": "https://bellevueelectrician.com/images/hero/electrician-team.jpg",
+    "image": "https://bellevueelectrician.com/images/hero/electrician-team.webp",
     "description": "Licensed and insured electricians serving Bellevue, WA — offering residential, commercial, and emergency electrical services.",
     "address": {
       "@type": "PostalAddress",
