--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
   <meta property="og:description" content="Get in touch with licensed electricians in Bellevue, WA. Request service or a free quote today!" />
   <meta property="og:url" content="https://bellevueelectrician.com/contact.html" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.jpg" />
+  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.webp" />
 
   <link rel="canonical" href="https://bellevueelectrician.com/contact.html" />
 
@@ -120,7 +120,7 @@
     "@context": "https://schema.org",
     "@type": "Electrician",
     "name": "Bellevue Electrician",
-    "image": "https://bellevueelectrician.com/images/hero/electrician-team.jpg",
+    "image": "https://bellevueelectrician.com/images/hero/electrician-team.webp",
     "telephone": "+1-425-555-0199",
     "email": "info@bellevueelectrician.com",
     "address": {
