--- a/domain-for-sale.html
+++ b/domain-for-sale.html
@@ -17,7 +17,7 @@
     "@type": "Product",
     "name": "BellevueElectrician.com Domain",
     "description": "Premium SEO-friendly domain perfect for electricians or electrical service providers in Bellevue, WA.",
-    "image": "https://bellevueelectrician.com/images/domain-preview.png",
+    "image": "https://bellevueelectrician.com/images/domain-preview.webp",
     "brand": {
       "@type": "Brand",
       "name": "Golden Domain"
