--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:description" content="Trusted electricians in Bellevue, WA offering residential, commercial, and emergency services. Get your free estimate today!" />
   <meta property="og:url" content="https://bellevueelectrician.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.jpg" />
+  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.webp" />
 
   <!-- ✅ Canonical URL -->
   <link rel="canonical" href="https://bellevueelectrician.com/" />
@@ -42,7 +42,7 @@
     "@context": "https://schema.org",
     "@type": "Electrician",
     "name": "Bellevue Electrician",
-    "image": "https://bellevueelectrician.com/images/hero/electrician-team.jpg",
+    "image": "https://bellevueelectrician.com/images/hero/electrician-team.webp",
     "@id": "https://bellevueelectrician.com/",
     "url": "https://bellevueelectrician.com/",
     "telephone": "+14255550134",
@@ -101,17 +101,17 @@
       <h2>Our Main Electrical Services</h2>
       <div class="service-list">
         <div class="service">
-          <img src="images/services/residential.jpg" alt="Residential electrical services in Bellevue WA by Bellevue Electrician" />
+          <img src="images/services/residential.webp" alt="Residential electrical services in Bellevue WA by Bellevue Electrician" />
           <h3>Residential Electrical</h3>
           <p>Complete wiring, lighting, upgrades, and troubleshooting for houses, condos, and apartments.</p>
         </div>
         <div class="service">
-          <img src="images/services/commercial.jpg" alt="Commercial electrical services in Bellevue WA by Bellevue Electrician" />
+          <img src="images/services/commercial.webp" alt="Commercial electrical services in Bellevue WA by Bellevue Electrician" />
           <h3>Commercial Electrical</h3>
           <p>Efficient electrical systems for offices, shops, and industrial buildings.</p>
         </div>
         <div class="service">
-          <img src="images/services/emergency.jpg" alt="24/7 emergency electrician in Bellevue WA by Bellevue Electrician" />
+          <img src="images/services/emergency.webp" alt="24/7 emergency electrician in Bellevue WA by Bellevue Electrician" />
           <h3>Emergency Repair</h3>
           <p>24/7 electrical repairs available for outages, faults, or urgent issues.</p>
         </div>
@@ -148,7 +148,7 @@
           <a href="about.html" class="btn">Learn More About Us</a>
         </div>
         <div class="about-image">
-          <img src="images/hero/electrician-team.jpg" alt="Team of Bellevue Electricians at work">
+          <img src="images/hero/electrician-team.webp" alt="Team of Bellevue Electricians at work">
         </div>
       </div>
     </div>
@@ -165,7 +165,7 @@
           <p>Full rewiring for a family home in downtown Bellevue — ensuring complete safety and compliance. See more of our <a href="projects.html">recent electrical projects</a>.</p>
         </div>
         <div class="project-image">
-          <img src="images/projects/bellevue-residential-wiring.jpg" alt="Home wiring upgrade project Bellevue WA by Bellevue Electrician">
+          <img src="images/projects/bellevue-residential-wiring.webp" alt="Home wiring upgrade project Bellevue WA by Bellevue Electrician">
         </div>
       </div>
 
@@ -175,7 +175,7 @@
           <p>Installed energy-efficient LED lighting in a local office, reducing costs by 35% and improving ambiance.</p>
         </div>
         <div class="project-image">
-          <img src="images/projects/bellevue-office-lighting-installation.jpg" alt="LED office lighting installation Bellevue WA by Bellevue Electrician">
+          <img src="images/projects/bellevue-office-lighting-installation.webp" alt="LED office lighting installation Bellevue WA by Bellevue Electrician">
         </div>
       </div>
 
@@ -185,7 +185,7 @@
           <p>Replaced old panels for a commercial building in Bellevue East — boosting performance and reliability.</p>
         </div>
         <div class="project-image">
-          <img src="images/projects/bellevue-commercial-panel-replacement.jpg" alt="Commercial electrical panel replacement Bellevue WA by Bellevue Electrician">
+          <img src="images/projects/bellevue-commercial-panel-replacement.webp" alt="Commercial electrical panel replacement Bellevue WA by Bellevue Electrician">
         </div>
       </div>
 
