--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
   </header>
 
   <!-- ===== HERO SECTION ===== -->
-  <section class="hero full-hero" style="background-image: url('images/hero/electrical-projects.jpg');">
+  <section class="hero full-hero" style="background-image: url('images/hero/electrical-projects.webp');">
     <div class="hero-content">
       <h1>Our Recent Electrical Projects in Bellevue</h1>
       <p>Explore professional electrical installations and upgrades completed by our licensed Bellevue electricians.</p>
@@ -50,19 +50,19 @@
 
       <div class="projects-grid">
         <div class="project-card">
-          <img loading="lazy" src="images/projects/bellevue-residential-wiring.jpg" alt="Residential electrical wiring upgrade in Bellevue WA">
+          <img loading="lazy" src="images/projects/bellevue-residential-wiring.webp" alt="Residential electrical wiring upgrade in Bellevue WA">
           <h3>Bellevue Residential Wiring Upgrade</h3>
           <p>Complete rewiring for a modern family home in downtown Bellevue, ensuring full code compliance, safety, and energy efficiency.</p>
         </div>
 
         <div class="project-card">
-          <img loading="lazy" src="images/projects/bellevue-office-lighting-installation.jpg" alt="Office LED lighting installation in Bellevue Washington">
+          <img loading="lazy" src="images/projects/bellevue-office-lighting-installation.webp" alt="Office LED lighting installation in Bellevue Washington">
           <h3>Office LED Lighting Installation</h3>
           <p>Installed energy-efficient LED lighting systems for a local Bellevue office space, reducing power consumption by 35% while enhancing brightness.</p>
         </div>
 
         <div class="project-card">
-          <img loading="lazy" src="images/projects/bellevue-commercial-panel-replacement.jpg" alt="Commercial electrical panel replacement Bellevue WA">
+          <img loading="lazy" src="images/projects/bellevue-commercial-panel-replacement.webp" alt="Commercial electrical panel replacement Bellevue WA">
           <h3>Commercial Electrical Panel Replacement</h3>
           <p>Upgraded main electrical panels and improved power distribution for a commercial building in Bellevue East, increasing reliability and performance.</p>
         </div>
