--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
   <meta property="og:description" content="Reliable and licensed electrical contractors serving Bellevue, WA. Offering installation, repair, and emergency electrical services." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://bellevueelectrician.com/services.html" />
-  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-tools.jpg" />
+  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-tools.webp" />
 
   <!-- ✅ Canonical -->
   <link rel="canonical" href="https://bellevueelectrician.com/services.html" />
@@ -58,7 +58,7 @@
   </header>
 
   <!-- HERO SECTION -->
-  <section class="hero full-hero" style="background-image: url('images/hero/electrician-tools.jpg');">
+  <section class="hero full-hero" style="background-image: url('images/hero/electrician-tools.webp');">
     <div class="hero-content">
       <h1>Professional Electrical Services in Bellevue, WA</h1>
       <p>Reliable. Safe. Affordable. Serving homes and businesses across Bellevue and nearby areas.</p>
@@ -73,37 +73,37 @@
       
       <div class="service-grid">
         <div class="service-card">
-          <img src="images/services/residential.jpg" alt="Residential electrical services Bellevue WA">
+          <img src="images/services/residential.webp" alt="Residential electrical services Bellevue WA">
           <h3>Residential Electrical</h3>
           <p>We handle all your home electrical needs — from lighting upgrades to full home rewiring. Our licensed electricians in Bellevue ensure safety, efficiency, and lasting quality.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/commercial.jpg" alt="Commercial electrical services Bellevue">
+          <img src="images/services/commercial.webp" alt="Commercial electrical services Bellevue">
           <h3>Commercial Electrical</h3>
           <p>Providing reliable electrical systems for offices, retail spaces, and warehouses. From installations to repairs — we help Bellevue businesses stay powered and safe.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/emergency.jpg" alt="24/7 emergency electrician Bellevue WA">
+          <img src="images/services/emergency.webp" alt="24/7 emergency electrician Bellevue WA">
           <h3>24/7 Emergency Services</h3>
           <p>Power outage or electrical failure? We’re available 24/7 to restore power quickly and safely for your home or commercial property.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/lighting.jpg" alt="Lighting installation Bellevue electrician">
+          <img src="images/services/lighting.webp" alt="Lighting installation Bellevue electrician">
           <h3>Lighting Installation</h3>
           <p>Upgrade your home or business with modern, energy-efficient lighting systems. Our team provides professional indoor and outdoor lighting solutions across Bellevue.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/panel-upgrade.jpg" alt="Electrical panel upgrade Bellevue">
+          <img src="images/services/panel-upgrade.webp" alt="Electrical panel upgrade Bellevue">
           <h3>Electrical Panel Upgrades</h3>
           <p>We replace outdated panels to improve safety and handle modern power demands — ensuring your property is up to code and energy efficient.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/inspection.jpg" alt="Electrical inspection and maintenance Bellevue">
+          <img src="images/services/inspection.webp" alt="Electrical inspection and maintenance Bellevue">
           <h3>Inspection & Maintenance</h3>
           <p>Prevent issues before they happen. We offer routine electrical inspections and maintenance to keep your systems running safely and efficiently all year.</p>
         </div>
@@ -149,7 +149,7 @@
     "provider": {
       "@type": "LocalBusiness",
       "name": "Bellevue Electrician",
-      "image": "https://bellevueelectrician.com/images/hero/electrician-tools.jpg",
+      "image": "https://bellevueelectrician.com/images/hero/electrician-tools.webp",
       "telephone": "+1-425-555-0134",
       "email": "info@bellevueelectrician.com",
       "address": {
